Fix various issues

--- a/web/templates/top.tmpl
+++ b/web/templates/top.tmpl
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!-- das_top.tmpl -->
+<!-- web_top.tmpl -->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head profile="http://www.w3.org/2005/11/profile">
     <title>CHESS Data Aggregation Service</title>
@@ -31,14 +31,13 @@
 </td><td>
 <h3>CHESS Data Aggregation System:
 <a href="/">Home</a>
-| <a id="das_top_bug" href="https://github.com/dmwm/das2go/issues">Bug report</a>
-| <a id="das_top_status" href="/status">Status</a>
-| <a id="das_top_cli" href="/cli">CLI</a>
-| <a id="das_top_faq" href="/faq">FAQ</a>
-| <a id="das_top_cli" href="javascript:FlipTag('das_cards')">Help</a>
+| <a id="web_top_bug" href="https://github.com/dmwm/ChessDataManagement/issues">Bug report</a>
+| <a id="web_top_search" href="/search">Search</a>
+| <a id="web_top_status" href="/status">Status</a>
+| <a id="web_top_faq" href="/faq">FAQ</a>
 </h3>
 </td></tr>
 </table>
 </div>
 <!--<hr class="line" /> -->
-<!-- end of das_top.tmpl -->
+<!-- end of web_top.tmpl -->
