Add code to handle queries

--- a/web/templates/bottom.tmpl
+++ b/web/templates/bottom.tmpl
@@ -1,15 +1,8 @@
 <!-- bottom.tmpl -->
-</div> <!-- end of _response tag -->
 <hr class="line" />
-<div class="results">
-<table width="100%" class="small">
-<tr>
-<td align="left">
-    version: {{.Version}}
-</td>
-</tr>
-</table>
-</div> <!-- end of id="results" -->
+<div>
+    {{.Version}}
+</div>
 <!-- end of bottom.tmpl -->
 </body>
 </html>
