Implement github auth

--- a/web/templates/top.tmpl
+++ b/web/templates/top.tmpl
@@ -45,11 +45,10 @@
         <!-- secondary navigation -->
         <nav class="is-push-right">
             <ul>
-                <li><a id="web_top_signin" href="/signin">SignIn</a></li>
+                <li><a href="javascript:deleteCookie('auth-session');load('/');">Logout</a></li>
             </ul>
         </nav>
     </div>
 </div>
 
-<!--<hr class="line" /> -->
 <!-- end of web_top.tmpl -->
