--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -1,8 +1,9 @@
 <!-- keys.tmpl -->
 <div class="form-container center-70">
 <form class="form-content" method="post" action="process">
+    <br/>
     <fieldset>
-        <legend>Experiment data</legend>
+        <legend>Experiment data ({{.User}})</legend>
 {{range $k, $v := .Keys}}
         <div class="form-item">
             <label> {{$k}} </label>
