--- a/web/templates/bottom.tmpl
+++ b/web/templates/bottom.tmpl
@@ -1,7 +1,7 @@
 <!-- bottom.tmpl -->
 <br/>
 <hr class="line" />
-<div>
+<div class="form-container center-70 center">
     {{.Version}}
 </div>
 <!-- end of bottom.tmpl -->
