Add hidden input

--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -18,6 +18,7 @@
         <div class="form-item">
             <div class="is-append is-push-right is-right">
                 <div class="is-80">
+                    <input type="hidden" name="user" value="{{.User}}"/>
                 </div>
                 <button class="button">Submit</button>
             </div>
