--- a/web/templates/keys.tmpl
+++ b/web/templates/keys.tmpl
@@ -11,8 +11,8 @@
         </div>
 {{end}}
         <div class="form-item">
-            <label>Additional information</label>
-            <textarea name="free" rows="3" class="is-90"></textarea>
+            <label>Description</label>
+            <textarea name="description" rows="3" class="is-90"></textarea>
         </div>
 
         <div class="form-item">
