--- a/web/templates/login.tmpl
+++ b/web/templates/login.tmpl
@@ -1,11 +1,9 @@
 <!-- home.tmpl -->
 
-<div class="is-width-small is-center">
-<!--
-<div class="form-container center-70 center">
-<form method="post" action="">
+<div class="is-70 is-center">
+<form method="post" action="auth">
     <fieldset>
-        <legend>Login data</legend>
+        <legend>CLASSE credentials</legend>
         <div class="form-item">
             <label>Name</label>
             <input type="text" name="name" class="is-50">
@@ -19,12 +17,14 @@
         </div>
     </fieldset>
 </form>
--->
+</div>
+<!--
 <br/>
 <br/>
 <h3>Welcome to CHESS Data Management</h3>
 To proceed pleaese authorize yourself with
 <a href="https://github.com/login/oauth/authorize?client_id={{.ClientID}}&redirect_uri={{.Redirect}}" class="button is-secondary is-30">Github</a>
 </div>
+-->
 
 <!-- end of home.tmpl -->
