--- a/web/templates/bottom.tmpl
+++ b/web/templates/bottom.tmpl
@@ -1,8 +1,9 @@
 <!-- bottom.tmpl -->
 <br/>
 <hr class="line" />
-<div class="form-container center-70 center">
-    {{.Version}}
+<div class="is-70 is-center is-small is-text-center">
+    Copyright &#169; Cornell Laboratory for Accelerator-based Sciences and Education
+    Supported by: <img src="/images/nsf_logo.png" alt="NSF" width="30">
 </div>
 <!-- end of bottom.tmpl -->
 </body>
