Make clear search placeholder text

--- a/web/templates/searchform.tmpl
+++ b/web/templates/searchform.tmpl
@@ -6,7 +6,7 @@
             {{if .Query}}
             <input type="text" name="query" value="{{.Query}}">
             {{else}}
-            <input type="text" name="query" placeholder="text search keywords">
+            <input type="text" name="query" placeholder="Use tag:value or free-text search keywords">
             {{end}}
             <button class="button">Search</button>
         </div>
