--- a/web/templates/pagination.tmpl
+++ b/web/templates/pagination.tmpl
@@ -24,10 +24,10 @@ Showing {{.StartIndex}}&#8212;{{.EndIndex}} records out of {{.Total}}.
         <nav class="is-push-right">
             <ul>
 			<li>
-                <a href="{{.FirstUrl}}" class="button is-secondary is-small">first</a>
-                <a href="{{.PrevUrl}}"  class="button is-secondary is-small">prev</a>
-                <a href="{{.NextUrl}}"  class="button is-secondary is-small">next</a>
-                <a href="{{.LastUrl}}"  class="button is-secondary is-small">last</a>
+                <a href="{{.FirstUrl}}" class="button is-secondary is-small is-gray">first</a>
+                <a href="{{.PrevUrl}}"  class="button is-secondary is-small is-gray">prev</a>
+                <a href="{{.NextUrl}}"  class="button is-secondary is-small is-gray">next</a>
+                <a href="{{.LastUrl}}"  class="button is-secondary is-small is-gray">last</a>
             </li>
             </ul>
         </nav>
