Re-factor code to make update records work

--- a/web/templates/update.tmpl
+++ b/web/templates/update.tmpl
@@ -3,8 +3,12 @@
 <form method="post" action="updateRecord" enctype="multipart/form-data">
     <div class="form-item">
         <input name="_id" type="hidden" value="{{.Id}}">
-        <textarea name="record" rows="20">{{.Record}}</textarea>
     </div>
+{{range $i, $input := .Inputs}}
+    <div class="form-item">
+        {{$input}}
+    </div>
+{{end}}
 
     <div class="form-item is-buttons">
         <button class="button">Update</button>
